# Proyecto3-Graficas

./: README.md
Proyecto3/: Cargo.toml
Proyecto3/src/: camera.rs  color.rs  fragment.rs  line.rs  main.rs  obj.rs  planet.rs  shaders.rs  triangle.rs  utils.rs  vertex.rs
